--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,30 @@
+<div class="container">
+    <app-navi></app-navi>
+    <br />
+    <div class="row">
+      <div class="col-md-4">
+        <app-brand></app-brand>
+        <br />
+        <br />
+        <div>
+          <app-color></app-color>
+        </div>
+      </div>
+      <div class="col-md-8">
+        <app-car></app-car>
+        <br>
+        <br>
+        <div>
+             <app-customer></app-customer>
+        </div>
+        <br>
+        <br>
+        <div>
+          <app-rental></app-rental>
+        </div>
+      </div>
+    </div>
+    <router-outlet></router-outlet>
+  </div>
 
-<app-navi></app-navi>
-<app-brand></app-brand>
-<app-car></app-car>
-<router-outlet></router-outlet>
+
