--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,1 +1,16 @@
-<p>brand works!</p>
+<div *ngIf="dataLoaded==false" class="spinner-border text-primary" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+<table class="table">
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>Name</th>
+        </tr>
+    </thead>
+    <tr *ngFor="let brand of brands">
+        <td>{{brand.brandId}}</td>
+        <td>{{brand.brandName}}</td>
+
+    </tr>
+</table>
